2011-12-18  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSBrowserCell.m (-drawInteriorWithFrame:inView:):
	When highlighted, use -image if -alternateImage is nil.

2011-12-18  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSTableView.m (-_isCellEditableColumn:row:): Tweak
	criteria for determining cell editability::
	- the delegate (if present) must say YES
	- and the cell itself must return YES for isEditable
	- and the table column must return YES for isEditable
	Previously you could edit cells that returned NO for
	isEditable if the column they were in was editable.

2011-12-18  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSTableHeaderView.m (-initWithCoder:): Remove unneeded
	"_tableView = nil" which was causing a problem with my xib file.

2011-12-18  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSBrowserCell.m (-image, -setImage:): Override NSCell
	implementation so these methods work without requiring the
	cell to be an image cell.
	* Source/NSBrowserCell.m (-drawInteriorWithFrame:inView:): Don't
	draw background. Remove -(void) isOpaque { return YES; }. Also
	pixel-align images and use modern -drawInRect: method.

2011-12-18 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSOutlineView.m (-_openItem:): Changed i fron NSUInteger
	to NSInteger.

2011-12-17 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSSliderCell.h
	* Headers/AppKit/NSLevelIndicator.h
	* Headers/AppKit/NSButtonCell.h
	* Headers/AppKit/NSButton.h
	* Headers/AppKit/NSMenuItem.h
	* Headers/AppKit/NSLevelIndicatorCell.h
	* Headers/AppKit/NSSlider.h
	* Headers/AppKit/NSTabView.h
	* Headers/AppKit/NSCell.h
	* Headers/AppKit/NSDrawer.h
	* Source/NSSliderCell.m
	* Source/NSLevelIndicator.m
	* Source/NSButtonCell.m
	* Source/NSButton.m
	* Source/NSMenu.m
	* Source/NSMenuItem.m
	* Source/NSLevelIndicatorCell.m
	* Source/NSComboBoxCell.m
	* Source/NSToolbarItem.m
	* Source/NSSlider.m
	* Source/NSTabView.m
	* Source/NSCell.m
	* Source/NSWindow.m